--- a/resume.html
+++ b/resume.html
@@ -5,9 +5,9 @@
 <body>
 
 <center>
-<img src="C:\Users\user\Downloads\kellton.jfif"></br>
+<img src=".\kellton.jfif"></br>
 <span><h1 id="name",>Shantanu Rawat</h1><hr></span>
-<span><h2 id="name"> Software Trainee </h2></span>
+<span><h2 id="designation"> Software Trainee </h2></span>
 <a href="mailto:shantanurawat17@gmail.com" target="_blank"><p id="email">shantanurawat17@gmail.com</p></a>
 <p id="contact">+91 8218706272</p>
 </center></br></br>
