--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
 <body>
 
 <center>
-<img src=".\kellton.jfif"></br>
+<img src="./kellton.jfif"></br>
 <span><h1 id="name",>Shantanu Rawat</h1><hr></span>
 <span><h2 id="designation"> Software Trainee </h2></span>
 <a href="mailto:shantanurawat17@gmail.com" target="_blank"><p id="email">shantanurawat17@gmail.com</p></a>
